--- a/TempSensor/app.config
+++ b/TempSensor/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="TempSensor.Properties.Settings.ArduinoConnectionString"
-            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Arduino;User ID=sa; Password=master"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Arduino"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
